Fixed design collapse on smartphone.

--- a/resources/sass/partial/_top.scss
+++ b/resources/sass/partial/_top.scss
@@ -12,7 +12,7 @@
 .top-subsection-item-inner h2 {
   font-size: 16px;
   font-weight: 700;
-  line-height: 1.7
+  line-height: 1.7;
 }
 
 .top-subsection-item-inner {
@@ -51,18 +51,18 @@
 .top-category-list .top-category-list-item a {
   color: $lightblue;
 }
-.top-category-list .top-category-list-item a:hover{
+.top-category-list .top-category-list-item a:hover {
   text-decoration: underline;
 }
 
 /* ベータ版モーダル 表示 */
-.wide-notice-overlay{
-  display:none;
-  width:100%;
-  height:100vh;
-  background: rgba(0,0,0,0.6);
-  position:fixed;
-  z-index:100;
+.wide-notice-overlay {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  z-index: 100;
 }
 .wide-notice-overlay .wide-notice-layout {
   width: 50%;
@@ -77,7 +77,7 @@
 .wide-notice-overlay .wide-notice-layout .notice-box p {
   margin-bottom: 20px;
 }
-.wide-notice-overlay .notice-close{
+.wide-notice-overlay .notice-close {
   display: inline-block;
   position: absolute;
   top: 4px;
@@ -90,11 +90,10 @@
   cursor: pointer;
 }
 .wide-notice-overlay .notice-close::after {
-  font-family: "Font Awesome 5 Free",FontAwesome;
+  font-family: "Font Awesome 5 Free", FontAwesome;
   font-weight: 900;
   content: "\f00d";
 }
-
 
 /* 案件一覧 */
 .newjob-entry {
@@ -106,39 +105,52 @@
     }
   }
   .newjob-item {
-    width:100%;
+    width: 100%;
     padding: 15px 0;
-    border-top: 1px solid #E8E8E8;
+    border-top: 1px solid #e8e8e8;
     @include mq(medium) {
       width: 32%;
       padding: 2em 0;
       border-top: 0;
     }
-  
-    .img-wrap {
-      width: 30%;
-      margin-right: 4%;
+
+    .joblist_jobCassette__image_wrap {
+      height: 79px;
+      margin-right: 6px;
+      padding: 1px;
+      position: relative;
+      width: 101px;
       @include mq(medium) {
+        margin-bottom: 10px;
         display: block;
         width: 100%;
         margin-right: 0;
-        margin-bottom: 10px;
+        height: auto;
       }
-    }
-    .img-wrap {
-      width: 30%;
-      margin-right: 4%;
-      @include mq(medium) {
-        margin-bottom: 10px;
-        display: block;
+
+      img {
+        bottom: 0;
+        left: 0;
+        margin: auto;
+        max-height: 79px;
+        max-width: 101px;
         width: 100%;
-        margin-right: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+
+        @include mq(medium) {
+          position: unset;
+          max-height: 135px;
+          object-fit: cover;
+          max-width: none;
+        }
       }
     }
 
     .txt-wrap {
       width: 66%;
-      @include mq(medium) {  
+      @include mq(medium) {
         width: 100%;
       }
 
@@ -175,10 +187,7 @@
             font-size: 16px;
           }
         }
-    
       }
-      
-      
     }
     .newjob-item:last-child {
       margin-right: 0;
@@ -194,16 +203,12 @@
   .newjob-list-border {
     border: 0;
     @include mq(medium) {
-
       border-top: 2px solid #ececec;
-     
     }
-  } 
-  
+  }
 }
- 
-  
-@media (max-width:768px) {
+
+@media (max-width: 768px) {
   /* ベータ版モーダル 表示 */
   .wide-notice-overlay .wide-notice-layout {
     padding: 40px 4vw 20px;
@@ -212,7 +217,7 @@
   .wide-notice-overlay .wide-notice-layout .notice-box p {
     margin-bottom: 20px;
   }
-  .wide-notice-overlay .notice-close{
+  .wide-notice-overlay .notice-close {
     display: inline-block;
     position: absolute;
     top: 4px;
@@ -240,14 +245,11 @@
   .top-category-list .top-category-list-item a {
     font-size: 13px;
     line-height: 1.5;
-    letter-spacing: -.1px;
+    letter-spacing: -0.1px;
   }
 
   .top-sp-auth-btn-wrap a {
-    border-radius: 0!important;
+    border-radius: 0 !important;
     padding: 12px 10px;
   }
-    
-
 }
-
